Fixed the Header with the nav bar and add some margin to the main section to make sure all content is visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,7 @@ header {
     font-family: 'PT Sans Narrow', sans-serif;
     font-weight: 700;
     order:0;    
+    position: fixed;
 }
 
 /* Styles the lopgo in the Header, Top Left*/
@@ -64,7 +65,10 @@ header {
 main {
    background-color: #7AFAC4;
     /* Enlarges the main element so that the footer is pushed downwards*/
-    flex: 1 0 auto;    
+    flex: 1 0 auto; 
+     /* Add margin at the top to prevent content from being covered by the header */
+     margin-top: 60px;
+       
 }
 
 h1, h2, h3, h4 {
